@@ -15,6 +15,9 @@ Changes in @NEW@:
     * The internal setModes policy now reports "suid/sgid" only for
       files that are setuid or setgid, rather than all files which
       have an explicitly set mode.
+    * TagSpec no longer will print out ignored TagSpec matches twice,
+      once for tags specified in the recipe, and once for tags
+      discovered in /etc/conary/tags/* (bz #902).
 
   o Bug Fixes:
     * A bug that caused conary to traceback in the face of a file on the 
